Fix: my comment (#36)
* remove datetime

* fix comment
- list가 아닌 page로 반환하도록 수정
- 정렬된 상태가 유지되도록 linkedhashmap을 사용하도록 수정

* refactor update user me
- modelattribute에서는 setter로만 바인딩 되기에 수정
- image가 null인 경우에는 기존 이미지를 사용하도록 수정